--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "nuxt": "^3.11.1",
+    "sass": "^1.72.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
-  }
+    "vue-router": "^4.3.0",
+    "vuetify": "^3.4.0-beta.1"
+  },
+  "devDependencies": {}
 }
